tests/transpiler/x/hs/map_in_operator.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/map_in_operator.hs:11:12: error:
    • No instance for (Num String) arising from the literal ‘1’
    • In the first argument of ‘elem’, namely ‘1’
      In the first argument of ‘print’, namely ‘(1 `elem` m)’
      In a stmt of a 'do' block: print (1 `elem` m)
   |
11 |     print (1 `elem` m)
   |            ^
