tests/transpiler/x/hs/map_in_operator.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:46 GMT+7
import Data.List (intercalate, isInfixOf, union, intersect, nub, sortOn, (\\))
import qualified Data.Map as Map
m = Map.fromList [(1, "a"), (2, "b")]

main :: IO ()
main = do
    print (1 `elem` m)
    print (3 `elem` m)
